re PR c/22421 (problems with -Wformat and bit-fields)

PR c/22421
	* c-decl.c (c_build_bitfield_integer_type): New function.
	(finish_struct): Call it.
	* c-pretty-print.c (pp_c_type_specifier): Handle bit-field types.

testsuite:
	* gcc.dg/format/bitfld-1.c: New test.

From-SVN: r102091